option('enable-libexif', type: 'boolean', value: true, description: 'enable EXIF support')
option('enable-cms', type: 'boolean', value: true, description: 'enable colour management support')
option('enable-xmp', type: 'boolean', value: true, description: 'enable special XMP support')
option('enable-libjpeg', type: 'boolean', value: true, description: 'enable special JPEG support')
option('enable-librsvg', type: 'boolean', value: true, description: 'enable RSVG support')
option('enable-gtk-doc', type: 'boolean', value: false, description: 'use gtk-doc to build documentation')
option('enable-introspection', type: 'boolean', value: true, description: 'Enable GObject Introspection (depends on GObject)')
option('enable-installed-tests', type: 'boolean', value: false, description: 'enable installed unit tests')
