iconsdir = $(datadir)/pixmaps/eog

icons_DATA = \
	orient-horizontal.png	\
	orient-vertical.png	\
	down-right.png		\
	right-down.png		\
	stock-flip-horizontal-16.png \
	stock-flip-vertical-16.png \
	stock-rotate-90-16.png	\
	stock-rotate-270-16.png	\
	stock-rotate-180-16.png \
	loading.png

EXTRA_DIST = $(icons_DATA)
