sources = [
  'bug-filing.page',
  'commandline.page',
  'copy-paste.page',
  'default.page',
  'desktop-background.page',
  'develop.page',
  'documentation.page',
  'edit.page',
  'flip-rotate.page',
  'format-change.page',
  'formats-save.page',
  'formats-view.page',
  'index.page',
  'introduction.page',
  'legal.xml',
  'license.page',
  'open.page',
  'plugin-exif-digital.page',
  'plugin-fullscreen-background.page',
  'plugin-fullscreen-double-click.page',
  'plugin-python-console.page',
  'plugin-send-by-mail.page',
  'plugin-slideshow-shuffle.page',
  'plugins.page',
  'plugin-zoom-width.page',
  'preferences.page',
  'print.page',
  'rename-multiple.page',
  'slideshow.page',
  'translate.page',
  'view.page',
  'zoom.page',
]

media = [
  'figures/multiple-convert.png',
  'figures/multiple-rename-count.png',
  'figures/org.gnome.eog.svg',
  'figures/org.gnome.eog-symbolic.svg',
  'figures/plugins-all.png',
  'figures/prefs-plugins.png',
]

gnome.yelp(
  eog_name,
  sources: sources,
  media: media,
)
